# ClinicManagementSystem

./: CMakeLists.txt
src/: main.cpp  stdTypes.h
src/Admin/: Admin.cpp  Admin.h
src/LinkedList/: LinkedList.cpp  LinkedList.h
src/PatientDataList/: PatientDataList.cpp  PatientDataList.h
src/handelingInputs/: HandelingInputs.cpp  HandelingInputs.h
src/user/: user.cpp  user.h
